gitops/nonprod/overlays/int1/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - cdb-int1.dev-dp-internal.dts-stn.com
      secretName: devdpinternaldtsstncom
  rules:
    - host: cdb-int1.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
